--- a/src/components/assets/sass/style.css
+++ b/src/components/assets/sass/style.css
@@ -7065,6 +7065,11 @@ Responsive Menu Css
   border-radius: 8px;
   padding: 40px 80px 40px 40px;
   transition: 0.5s;
+  width: 300px;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .services__one-item > i {
   font-size: 80px;
